Fix CORS configuration and enable Flyway baseline on migrate